--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,40 +2,43 @@ version: "3"
 
 services:
 
-  db:
-    image: postgres
+  sqlite:
+    image: sqlite:latest
     environment:
-      - POSTGRES_PASSWORD=nueva_contraseña
-    volumes: 
-      - ./postgresql/data_science_jobs_salaries.csv:/postgresql/data_science_jobs_salaries.csv
-    container_name: postgresql
+      SQLITE_DATABASE: mydb
+    container_name: sqlite
+    networks:
+      - my-network
+
+  phpmyadmin:
+    image: phpmyadmin
+    ports:
+      - 8080:80
+    environment:
+      PMA_HOST: sqlite
+    networks:
+      - my-network
 
   fastapi:
     build: fastapi/
     ports:
       - 8000:8000
-    networks:
-      - deploy_network
+    environment:
+      - DB_HOST: sqlite
     container_name: fastapi
-    volumes:
-      - mis_datos:/var/lib/docker/volumes/aa-streamlit-fastapi_mis_datos/data_fastapi
+    networks:
+      - my-network
+
   streamlit:
     build: streamlit/
     depends_on:
       - fastapi
     ports:
       - 8501:8501
-    networks:
-      - deploy_network
     container_name: streamlit
-    volumes:
-      - mis_datos:/var/lib/docker/volumes/aa-streamlit-fastapi_mis_datos/data_fastapi
-  
+    networks:
+      - my-network
+
 networks:
-  deploy_network:
+  my-network:
     driver: bridge
-
-volumes:
-  mis_datos:
-    driver: local
-
